# xtracto

./: .eslintrc.js  .gitignore  pyproject.toml  readme.md  requirements.txt  setup.py  tsconfig.js
.github/workflows/: publish-on-push.yml
dev/: __init__.py  jsdeps.txt  tests.py  xtracto.config.py
dev/test/: bundletest3.pypx  componentwithissues.pypx  import.pypx  invalid.css
dev/test/modules/: component.pypx  invalidjs.js  valid.css  validjs.js  validjs2.js
dev/test/pages/: _layout.pypx  basic.pypx  basic2.pypx  bundletest3.pypx  componentimport.pypx  import.pypx
tests/: test_builder.py  test_possible_atks.py  test_xtracto.py
xtracto/: __init__.py  _images.py  builder.py  pypx.md  utils.py
xtracto/codegen/: __init__.py  html_generator.py
xtracto/components/: __init__.py  file_manager.py  import_resolver.py  layout_manager.py
xtracto/core/: __init__.py  cache.py  config.py  errors.py  logging.py
xtracto/parsing/: __init__.py  ast_nodes.py  lexer.py  parser.py  tokenizer.py  tokens.py
xtracto/rendering/: __init__.py  jinja_renderer.py  tailwind.py
