[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtracto"
version = "0.0.9"
description = "Xtracto is a lightweight web development framework designed to simplify the process of creating dynamic web pages using Python and pypx."
readme = "readme.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "shashstormer"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
    "requestez",
    "pytailwind",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/shashstormer/xtracto"
Repository = "https://github.com/shashstormer/xtracto"

[tool.setuptools.packages.find]
where = ["."]
include = ["xtracto*"]
exclude = ["tests*"]
